[project]
name = "02-2025-vector-search"
version = "0.1.0"
description = "LLM zoomcamp 2025:Modulo 2 vector-search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.54.0",
    "dlt>=1.13.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "minsearch>=0.0.3",
    "notebook>=7.4.3",
    "openai>=1.90.0",
    "qdrant-client[fastembed]>=1.14.2",
    "requests>=2.32.4",
]
