[project]
name = "03-2025-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elasticsearch>=8.0.0,<9.0.0", # Usa versione 8.x compatibile
    "marimo>=0.14.16",
    "minsearch>=0.0.4",
    "nbformat>=5.10.4",
    "pandas>=2.3.1",
    "qdrant-client[fastembed]>=1.15.1",
    "requests>=2.32.4",
    "rouge>=1.0.1",
    "tqdm>=4.67.1",
]
